Level Travelling with session

--- a/RPGPrototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/RPGPrototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1070,10 +1070,12 @@ NewLevelDialog.TimeStamp=2022.03.01-21.48.00
 NewLevelDialog.LastCompileMethod=Unknown
 HierarchicalLODUtilities.TimeStamp=2022.03.01-21.47.58
 HierarchicalLODUtilities.LastCompileMethod=Unknown
-MultiplayerSession.TimeStamp=2023.02.20-19.39.04
+MultiplayerSession.TimeStamp=2023.02.26-12.02.07
 MultiplayerSession.LastCompileMethod=External
 SequencerWidgets.TimeStamp=2022.03.01-21.48.01
 SequencerWidgets.LastCompileMethod=Unknown
+PerfCounters.TimeStamp=2022.03.01-21.48.00
+PerfCounters.LastCompileMethod=Unknown
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -1166,6 +1168,47 @@ ThirdPersonExampleMap_C.Tick=True
 ThirdPersonExampleMap_C.Replication=True
 ThirdPersonExampleMap_C.Actor=True
 ThirdPersonExampleMap_C.Input=True
+ThirdPersonCharacter_C.TransformCommon=True
+ThirdPersonCharacter_C.Animation=True
+ThirdPersonCharacter_C.Mesh=True
+ThirdPersonCharacter_C.CameraSettings=True
+ThirdPersonCharacter_C.CameraOptions=True
+ThirdPersonCharacter_C.Physics=True
+ThirdPersonCharacter_C.CameraCollision=True
+ThirdPersonCharacter_C.Lighting=True
+ThirdPersonCharacter_C.Lag=True
+ThirdPersonCharacter_C.Tags=True
+ThirdPersonCharacter_C.Activation=True
+ThirdPersonCharacter_C.SkinWeights=True
+ThirdPersonCharacter_C.Cooking=True
+ThirdPersonCharacter_C.PostProcess=True
+ThirdPersonCharacter_C.Lens=True
+ThirdPersonCharacter_C.Color Grading=True
+ThirdPersonCharacter_C.Rendering Features=True
+ThirdPersonCharacter_C.Clothing=True
+ThirdPersonCharacter_C.MasterPoseComponent=True
+ThirdPersonCharacter_C.ClothingSimulation=True
+ThirdPersonCharacter_C.Navigation=True
+ThirdPersonCharacter_C.VirtualTexture=True
+ThirdPersonCharacter_C.Character Movement (General Settings)=True
+ThirdPersonCharacter_C.Character Movement: Walking=True
+ThirdPersonCharacter_C.Character Movement: Jumping / Falling=True
+ThirdPersonCharacter_C.Character Movement (Networking)=True
+ThirdPersonCharacter_C.Character Movement: Swimming=True
+ThirdPersonCharacter_C.Character Movement: Flying=True
+ThirdPersonCharacter_C.Character Movement: Custom Movement=True
+ThirdPersonCharacter_C.Character Movement (Rotation Settings)=True
+ThirdPersonCharacter_C.Character Movement: Physics Interaction=True
+ThirdPersonCharacter_C.Character Movement=True
+ThirdPersonCharacter_C.Character Movement: Avoidance=True
+ThirdPersonCharacter_C.RootMotion=True
+ThirdPersonCharacter_C.Character Movement: NavMesh Movement=True
+ThirdPersonCharacter_C.NavMovement=True
+ThirdPersonCharacter_C.Velocity=True
+ThirdPersonCharacter_C.PlanarMovement=True
+ThirdPersonCharacter_C.MovementComponent=True
+ThirdPersonCharacter_C.Shape=True
+ThirdPersonCharacter_C.Materials=True
 
 [MessageLog]
 LastLogListing=LoadErrors
@@ -1210,8 +1253,8 @@ MRUItem0=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
 MRUItem1=/Game/Level/Level1
 
 [ContentBrowserRecent]
-MRUItem0=/MultiplayerSession/UI/WBP_Menu
-MRUItem1=/Game/Player/ThirdPersonCharacter
+MRUItem0=/Game/Player/ThirdPersonCharacter
+MRUItem1=/MultiplayerSession/UI/WBP_Menu
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
