--- a/RPGPrototype/Config/DefaultGame.ini
+++ b/RPGPrototype/Config/DefaultGame.ini
@@ -1,3 +1,6 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=F264E46744FCB516C70C00B568185156
 ProjectName=Third Person Game Template
+
+[/Script/Engine.GameSession]
+MaxPlayers=100
