--- a/RPGPrototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/RPGPrototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -166,17 +166,17 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/MultiplayerSession/UI
+ContentBrowserTab1.SelectedPaths=/Game/Level
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
+LastLevel=/Game/Level/Level1
 
 [ModuleFileTracking]
-RPGPrototype.TimeStamp=2023.02.18-19.34.14
+RPGPrototype.TimeStamp=2023.03.07-19.49.07
 RPGPrototype.LastCompileMethod=External
 PakFile.TimeStamp=2022.03.01-21.48.00
 PakFile.LastCompileMethod=Unknown
@@ -1070,7 +1070,7 @@ NewLevelDialog.TimeStamp=2022.03.01-21.48.00
 NewLevelDialog.LastCompileMethod=Unknown
 HierarchicalLODUtilities.TimeStamp=2022.03.01-21.47.58
 HierarchicalLODUtilities.LastCompileMethod=Unknown
-MultiplayerSession.TimeStamp=2023.02.26-12.02.07
+MultiplayerSession.TimeStamp=2023.03.07-19.49.10
 MultiplayerSession.LastCompileMethod=External
 SequencerWidgets.TimeStamp=2022.03.01-21.48.01
 SequencerWidgets.LastCompileMethod=Unknown
@@ -1209,6 +1209,10 @@ ThirdPersonCharacter_C.PlanarMovement=True
 ThirdPersonCharacter_C.MovementComponent=True
 ThirdPersonCharacter_C.Shape=True
 ThirdPersonCharacter_C.Materials=True
+BP_RPGGameMode_C.Tick=True
+BP_RPGGameMode_C.Classes=True
+BP_RPGGameMode_C.Game=True
+BP_RPGGameMode_C.GameMode=True
 
 [MessageLog]
 LastLogListing=LoadErrors
@@ -1235,7 +1239,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../Unreal/RPGPrototype_ue4/RPGPrototype/Content/ThirdPersonCPP/Maps
+UNR=../../../../../Unreal/RPGPrototype_ue4/RPGPrototype/Content/Level
 BRUSH=../../../../../Unreal/RPGPrototype_ue4/RPGPrototype/Content/
 FBX=../../../../../Unreal/RPGPrototype_ue4/RPGPrototype/Content/
 FBXAnim=../../../../../Unreal/RPGPrototype_ue4/RPGPrototype/Content/
@@ -1249,12 +1253,14 @@ Level=../../../../../Unreal/RPGPrototype_ue4/RPGPrototype/Content/Level
 Project=E:/UnrealEngine4/UE_4.27/
 
 [MRU]
-MRUItem0=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
-MRUItem1=/Game/Level/Level1
+MRUItem0=/Game/Level/Level1
+MRUItem1=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Player/ThirdPersonCharacter
-MRUItem1=/MultiplayerSession/UI/WBP_Menu
+MRUItem0=/Game/Level/Level1
+MRUItem1=/Game/Player/GameCore/GameMode/BP_RPGGameMode
+MRUItem2=/Game/Player/ThirdPersonCharacter
+MRUItem3=/MultiplayerSession/UI/WBP_Menu
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1295,6 +1301,7 @@ NodeTemplateCacheCapMB=20.000000
 [AssetEditorToolkitTabLocation]
 /Game/Player/ThirdPersonCharacter.ThirdPersonCharacter=1
 /MultiplayerSession/UI/WBP_Menu.WBP_Menu=0
+/Game/Player/GameCore/GameMode/BP_RPGGameMode.BP_RPGGameMode=0
 
 [WidgetTemplatesExpanded]
 Common=False
@@ -1368,4 +1375,7 @@ TrajectoryPathCap=250
 bShowOutlinerInfoColumn=True
 FrameNumberDisplayFormat=Seconds
 MovieRendererName=
+
+[DetailCustomWidgetExpansion]
+WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 
