--- a/RPGPrototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/RPGPrototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -176,7 +176,7 @@ ToolbarOpenBPClass.CurrentViewType=0
 LastLevel=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
 
 [ModuleFileTracking]
-RPGPrototype.TimeStamp=2023.03.07-19.49.07
+RPGPrototype.TimeStamp=2023.03.16-19.25.33
 RPGPrototype.LastCompileMethod=External
 PakFile.TimeStamp=2022.03.01-21.48.00
 PakFile.LastCompileMethod=Unknown
@@ -1070,7 +1070,7 @@ NewLevelDialog.TimeStamp=2022.03.01-21.48.00
 NewLevelDialog.LastCompileMethod=Unknown
 HierarchicalLODUtilities.TimeStamp=2022.03.01-21.47.58
 HierarchicalLODUtilities.LastCompileMethod=Unknown
-MultiplayerSession.TimeStamp=2023.03.07-20.01.47
+MultiplayerSession.TimeStamp=2023.03.16-19.13.20
 MultiplayerSession.LastCompileMethod=External
 SequencerWidgets.TimeStamp=2022.03.01-21.48.01
 SequencerWidgets.LastCompileMethod=Unknown
@@ -1218,7 +1218,7 @@ BP_RPGGameMode_C.GameMode=True
 LastLogListing=LoadErrors
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -1302,6 +1302,7 @@ NodeTemplateCacheCapMB=20.000000
 /Game/Player/ThirdPersonCharacter.ThirdPersonCharacter=1
 /MultiplayerSession/UI/WBP_Menu.WBP_Menu=0
 /Game/Player/GameCore/GameMode/BP_RPGGameMode.BP_RPGGameMode=0
+/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap.ThirdPersonExampleMap:PersistentLevel.ThirdPersonExampleMap=1
 
 [WidgetTemplatesExpanded]
 Common=False
