--- a/RPGPrototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/RPGPrototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -75,7 +75,7 @@ LaunchConfiguration=LaunchConfig_Default
 PackFilesForLaunch=NoPak
 bAutoCompileBlueprintsOnLaunch=True
 bLaunchSeparateServer=False
-PlayNetMode=PIE_Standalone
+PlayNetMode=PIE_ListenServer
 RunUnderOneProcess=True
 PlayNetDedicated=False
 PlayNumberOfClients=1
@@ -166,7 +166,7 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Level
+ContentBrowserTab1.SelectedPaths=/Game/Player/UI/WidgetPlayer
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
@@ -176,7 +176,7 @@ ToolbarOpenBPClass.CurrentViewType=0
 LastLevel=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
 
 [ModuleFileTracking]
-RPGPrototype.TimeStamp=2023.03.16-19.35.39
+RPGPrototype.TimeStamp=2023.08.20-10.45.38
 RPGPrototype.LastCompileMethod=External
 PakFile.TimeStamp=2022.03.01-21.48.00
 PakFile.LastCompileMethod=Unknown
@@ -1213,12 +1213,265 @@ BP_RPGGameMode_C.Tick=True
 BP_RPGGameMode_C.Classes=True
 BP_RPGGameMode_C.Game=True
 BP_RPGGameMode_C.GameMode=True
+CapsuleComponent.Variable=True
+CapsuleComponent.TransformCommon=True
+CapsuleComponent.Sockets=True
+CapsuleComponent.Shape=True
+CapsuleComponent.Navigation=True
+CapsuleComponent.ComponentTick=True
+CapsuleComponent.Rendering=True
+CapsuleComponent.Physics=True
+CapsuleComponent.Collision=True
+CapsuleComponent.Tags=True
+CapsuleComponent.ComponentReplication=True
+CapsuleComponent.Cooking=True
+CapsuleComponent.Events=True
+CharacterMovementComponent.Variable=True
+CharacterMovementComponent.Sockets=True
+CharacterMovementComponent.Character Movement (General Settings)=True
+CharacterMovementComponent.Character Movement: Walking=True
+CharacterMovementComponent.Character Movement: Jumping / Falling=True
+CharacterMovementComponent.ComponentTick=True
+CharacterMovementComponent.Character Movement (Networking)=True
+CharacterMovementComponent.Character Movement: Swimming=True
+CharacterMovementComponent.Character Movement: Flying=True
+CharacterMovementComponent.Character Movement: Custom Movement=True
+CharacterMovementComponent.Character Movement (Rotation Settings)=True
+CharacterMovementComponent.Character Movement: Physics Interaction=True
+CharacterMovementComponent.Character Movement=True
+CharacterMovementComponent.Character Movement: Avoidance=True
+CharacterMovementComponent.RootMotion=True
+CharacterMovementComponent.Character Movement: NavMesh Movement=True
+CharacterMovementComponent.NavMovement=True
+CharacterMovementComponent.Velocity=True
+CharacterMovementComponent.PlanarMovement=True
+CharacterMovementComponent.MovementComponent=True
+CharacterMovementComponent.Tags=True
+CharacterMovementComponent.ComponentReplication=True
+CharacterMovementComponent.Activation=True
+CharacterMovementComponent.Cooking=True
+CharacterMovementComponent.Events=True
+WidgetComponent.Variable=True
+WidgetComponent.TransformCommon=True
+WidgetComponent.Sockets=True
+WidgetComponent.Materials=True
+WidgetComponent.UserInterface=True
+WidgetComponent.Interaction=True
+WidgetComponent.ComponentTick=True
+WidgetComponent.Animation=True
+WidgetComponent.Layers=True
+WidgetComponent.Physics=True
+WidgetComponent.Collision=True
+WidgetComponent.Rendering=True
+WidgetComponent.Navigation=True
+WidgetComponent.VirtualTexture=True
+WidgetComponent.Tags=True
+WidgetComponent.ComponentReplication=True
+WidgetComponent.Cooking=True
+WidgetComponent.Events=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.DefaultValueCategory=True
+K2Node_VariableGet.Events=True
+WBP_OverheadWidget_C.Appearance=True
+WBP_OverheadWidget_C.Input=True
+WBP_OverheadWidget_C.Accessibility=True
+WBP_OverheadWidget_C.Interaction=True
+WBP_OverheadWidget_C.Behavior=True
+WBP_OverheadWidget_C.Render Transform=True
+WBP_OverheadWidget_C.Performance=True
+WBP_OverheadWidget_C.Clipping=True
+WBP_OverheadWidget_C.Navigation=True
+WBP_OverheadWidget_C.Localization=True
+WBP_OverheadWidget_C.Designer=True
+WBP_OverheadWidget_C.Layout=True
+EditorStyleSettings.UserInterface=True
+EditorStyleSettings.Accessibility=True
+EditorStyleSettings.Colors=True
+EditorStyleSettings.Graphs=True
+EditorStyleSettings.Output Log=True
+EditorExperimentalSettings.HDR=True
+EditorExperimentalSettings.Foliage=True
+EditorExperimentalSettings.Tools=True
+EditorExperimentalSettings.UserInterface=True
+EditorExperimentalSettings.Blueprints=True
+EditorExperimentalSettings.World=True
+EditorExperimentalSettings.Cooking=True
+EditorExperimentalSettings.PIE=True
+EditorExperimentalSettings.LightingBuilds=True
+EditorExperimentalSettings.Core=True
+EditorExperimentalSettings.Materials=True
+EditorExperimentalSettings.Content Browser=True
+EditorSettings.DerivedDataCache=True
+EditorSettings.Derived Data Cache S3=True
+EditorKeyboardShortcutSettings.AdvancedPreviewScene=True
+EditorKeyboardShortcutSettings.AnimGraph=True
+EditorKeyboardShortcutSettings.AnimSequenceCurveEditor=True
+EditorKeyboardShortcutSettings.AssetEditor=True
+EditorKeyboardShortcutSettings.LoadingProfilerCommand=True
+EditorKeyboardShortcutSettings.AssetManagerEditorCommands=True
+EditorKeyboardShortcutSettings.BlueprintDebugger=True
+EditorKeyboardShortcutSettings.BlueprintEditor=True
+EditorKeyboardShortcutSettings.BlueprintEditorSpawnNodes=True
+EditorKeyboardShortcutSettings.CameraShakePreviewer=True
+EditorKeyboardShortcutSettings.CameraCutTrack=True
+EditorKeyboardShortcutSettings.ClothPainterTools=True
+EditorKeyboardShortcutSettings.ClothPainter=True
+EditorKeyboardShortcutSettings.TakeRecorderSources=True
+EditorKeyboardShortcutSettings.TakeRecorder=True
+EditorKeyboardShortcutSettings.SequenceRecorder.Common=True
+EditorKeyboardShortcutSettings.LiveLinkClient.Common=True
+EditorKeyboardShortcutSettings.GenericCommands=True
+EditorKeyboardShortcutSettings.WidgetDesigner=True
+EditorKeyboardShortcutSettings.EditorViewport=True
+EditorKeyboardShortcutSettings.ContentBrowser=True
+EditorKeyboardShortcutSettings.GenericCurveEditor=True
+EditorKeyboardShortcutSettings.CurveEditorTools=True
+EditorKeyboardShortcutSettings.TabCommands=True
+EditorKeyboardShortcutSettings.BlueprintFavoritesPalette=True
+EditorKeyboardShortcutSettings.FoliageEditMode=True
+EditorKeyboardShortcutSettings.FullBlueprintEditor=True
+EditorKeyboardShortcutSettings.GraphEditor=True
+EditorKeyboardShortcutSettings.InsightsCommands=True
+EditorKeyboardShortcutSettings.LandscapeEditor=True
+EditorKeyboardShortcutSettings.LayersView=True
+EditorKeyboardShortcutSettings.LevelEditor=True
+EditorKeyboardShortcutSettings.LevelEditorModes=True
+EditorKeyboardShortcutSettings.LevelSequenceEditor=True
+EditorKeyboardShortcutSettings.LevelViewport=True
+EditorKeyboardShortcutSettings.BlueprintLibraryPalette=True
+EditorKeyboardShortcutSettings.MainFrame=True
+EditorKeyboardShortcutSettings.MaterialEditor=True
+EditorKeyboardShortcutSettings.MediaPlayerEditor=True
+EditorKeyboardShortcutSettings.MemoryProfilerCommand=True
+EditorKeyboardShortcutSettings.MeshPainter=True
+EditorKeyboardShortcutSettings.MeshPaint=True
+EditorKeyboardShortcutSettings.MeshPaintingTools=True
+EditorKeyboardShortcutSettings.MyBlueprint=True
+EditorKeyboardShortcutSettings.NetworkingProfilerCommand=True
+EditorKeyboardShortcutSettings.NiagaraEditor=True
+EditorKeyboardShortcutSettings.OculusTool=True
+EditorKeyboardShortcutSettings.BlueprintPalette=True
+EditorKeyboardShortcutSettings.PersonaCommon=True
+EditorKeyboardShortcutSettings.PlayWorld=True
+EditorKeyboardShortcutSettings.RayTracingDebugVisualizationMenu=True
+EditorKeyboardShortcutSettings.VisualizationMenu=True
+EditorKeyboardShortcutSettings.SCSEditorViewport=True
+EditorKeyboardShortcutSettings.Sequencer=True
+EditorKeyboardShortcutSettings.ShowFlagsMenu=True
+EditorKeyboardShortcutSettings.SplineComponentVisualizer=True
+EditorKeyboardShortcutSettings.StandardToolCommands=True
+EditorKeyboardShortcutSettings.SteamVREditor=True
+EditorKeyboardShortcutSettings.SystemWideCommands=True
+EditorKeyboardShortcutSettings.TimingProfilerCommand=True
+EditorKeyboardShortcutSettings.UMGEditor=True
+EditorKeyboardShortcutSettings.EditorViewportClient=True
+EditorKeyboardShortcutSettings.VisualLogger=True
+LiveCodingSettings.General=True
+LiveCodingSettings.Modules=True
+EditorLoadingSavingSettings.Startup=True
+EditorLoadingSavingSettings.AutoReimport=True
+EditorLoadingSavingSettings.Blueprints=True
+EditorLoadingSavingSettings.AutoSave=True
+EditorLoadingSavingSettings.SourceControl=True
+EditorPerProjectUserSettings.DeveloperTools=True
+EditorPerProjectUserSettings.AI=True
+EditorPerProjectUserSettings.SimplygonSwarm=True
+EditorPerProjectUserSettings.HotReload=True
+EditorPerProjectUserSettings.Import=True
+EditorPerProjectUserSettings.Export=True
+EditorPerProjectUserSettings.UnrealAutomationTool=True
+EditorPerformanceSettings.EditorPerformance=True
+InternationalizationSettingsModel.Internationalization=True
+InternationalizationSettingsModel.Time=True
+SourceCodeAccessSettings.Accessor=True
+SynthesisEditorSettings.Source Effects=True
+SynthesisEditorSettings.Submix Effects=True
+EditorTutorialSettings.Tutorials=True
+VRModeSettings.General=True
+VRModeSettings.Cinematics=True
+VRModeSettings.World Movement=True
+VRModeSettings.UI Customization=True
+VRModeSettings.Motion Controllers=True
+LevelEditorMiscSettings.Editing=True
+LevelEditorMiscSettings.Sound=True
+LevelEditorMiscSettings.Levels=True
+LevelEditorMiscSettings.Screenshots=True
+LevelEditorPlaySettings.PlayInEditor=True
+LevelEditorPlaySettings.GameViewportSettings=True
+LevelEditorPlaySettings.PlayInNewWindow=True
+LevelEditorPlaySettings.PlayInStandaloneGame=True
+LevelEditorPlaySettings.Multiplayer Options=True
+LevelEditorPlaySettings.PlayOnDevice=True
+LevelEditorPlaySettings.MultiplayerOptions=True
+OnlinePIESettings.Logins=True
+LevelEditorViewportSettings.Controls=True
+LevelEditorViewportSettings.LookAndFeel=True
+LevelEditorViewportSettings.GridSnapping=True
+LevelEditorViewportSettings.Preview=True
+PersonaOptions.Preview Scene=True
+PersonaOptions.Viewport=True
+PersonaOptions.Audio=True
+PersonaOptions.Composites and Montages=True
+PersonaOptions.Skeleton Tree=True
+PersonaOptions.Mesh=True
+PersonaOptions.Asset Browser=True
+BlueprintEditorSettings.VisualStyle=True
+BlueprintEditorSettings.Workflow=True
+BlueprintEditorSettings.Experimental=True
+BlueprintEditorSettings.Compiler=True
+BlueprintEditorSettings.DeveloperTools=True
+BlueprintEditorSettings.Performance=True
+ContentBrowserSettings.ContentBrowser=True
+CurveEditorSettings.Curve Editor=True
+SequencerSettings.Keyframing=True
+SequencerSettings.General=True
+SequencerSettings.Timeline=True
+SequencerSettings.Snapping=True
+SequencerSettings.CurveEditor=True
+SequencerSettings.Playback=True
+FlipbookEditorSettings.Background=True
+GraphEditorSettings.GeneralStyle=True
+GraphEditorSettings.Splines=True
+GraphEditorSettings.PinColors=True
+GraphEditorSettings.NodeTitleColors=True
+GraphEditorSettings.Tracing=True
+GraphEditorSettings.ContextMenu=True
+GraphEditorSettings.CommentNodes=True
+MaterialEditorSettings.Offline Shader Compilers=True
+MaterialEditorSettings.User Interface Domain=True
+MeshPaintSettings.Visualization=True
+SkeletalMeshEditorSettings.AnimationPreview=True
+SpriteEditorSettings.Background=True
+TakeRecorderUserSettings.User Settings=True
+TileMapEditorSettings.Background=True
+TileMapEditorSettings.Grid=True
+TileSetEditorSettings.Background=True
+TileSetEditorSettings.Tile Editor=True
+TileSetEditorSettings.Tile Sheet Conditioning=True
+WidgetDesignerSettings.GridSnapping=True
+WidgetDesignerSettings.Dragging=True
+WidgetDesignerSettings.Visuals=True
+WidgetDesignerSettings.Interaction=True
+PythonScriptPluginUserSettings.Python=True
+CrashReportsPrivacySettings.Options=True
+AnalyticsPrivacySettings.Options=True
+AutomationTestSettings.Loading=True
+AutomationTestSettings.Automation=True
+AutomationTestSettings.Open Asset Tests=True
+AutomationTestSettings.PIE Test Maps=True
+AutomationTestSettings.MiscAutomationSetups=True
+AutomationTestSettings.ExternalTools=True
+AutomationTestSettings.Screenshots=True
+CrashReporterSettings.CrashReporter=True
+DataValidationSettings.Validation Scenarios=True
+GameplayTagsDeveloperSettings.GameplayTags=True
+LogVisualizerSettings.VisualLogger=True
 
 [MessageLog]
 LastLogListing=LoadErrors
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -1239,7 +1492,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../Unreal/RPGPrototype_ue4/RPGPrototype/Content/Level
+UNR=../../../../../Unreal/RPGPrototype_ue4/RPGPrototype/Content/ThirdPersonCPP/Maps
 BRUSH=../../../../../Unreal/RPGPrototype_ue4/RPGPrototype/Content/
 FBX=../../../../../Unreal/RPGPrototype_ue4/RPGPrototype/Content/
 FBXAnim=../../../../../Unreal/RPGPrototype_ue4/RPGPrototype/Content/
@@ -1253,14 +1506,15 @@ Level=../../../../../Unreal/RPGPrototype_ue4/RPGPrototype/Content/Level
 Project=E:/UnrealEngine4/UE_4.27/
 
 [MRU]
-MRUItem0=/Game/Level/Level1
-MRUItem1=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
+MRUItem0=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
+MRUItem1=/Game/Level/Level1
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Level/Level1
-MRUItem1=/Game/Player/GameCore/GameMode/BP_RPGGameMode
-MRUItem2=/Game/Player/ThirdPersonCharacter
-MRUItem3=/MultiplayerSession/UI/WBP_Menu
+MRUItem0=/Game/Player/ThirdPersonCharacter
+MRUItem1=/Game/Player/UI/WidgetPlayer/WBP_OverheadWidget
+MRUItem2=/Game/Level/Level1
+MRUItem3=/Game/Player/GameCore/GameMode/BP_RPGGameMode
+MRUItem4=/MultiplayerSession/UI/WBP_Menu
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1379,4 +1633,18 @@ MovieRendererName=
 
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
+
+[DetailPropertyExpansion]
+TextBlock="\"Object.Render Transform.RenderTransformPivot\" "
+TextLayoutWidget="\"Object.Render Transform.RenderTransformPivot\" "
+Widget="\"Object.Render Transform.RenderTransformPivot\" "
+Visual="\"Object.Render Transform.RenderTransformPivot\" "
+Object=
+EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
+CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
+AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
+
+[DetailMultiObjectNodeExpansion]
+EditorStyleSettings=True
+LevelEditorPlaySettings=True
 
